<resources>
    <string name="app_name">StammarSkool</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dont_have_an_account">Dont have an account? <font color='#6D31A3'>Sign up</font></string>
    <string name="already_have_an_account">Already have an account? <font color='#6D31A3'>Sign in</font></string>
    <string name="daf">Achieve slower, more fluent speech by using our Delayed Auditory Feedback</string>
    <string name="read_loud">Application options that will help you feel confident in everyday communication.</string>
    <string name="privacy_policy">By signing in you accept our <u> <font color='#000'>Term of use</font></u>  and
        <u><font color='#000'> Privacy Policy </font> </u></string>


    <string name="status_start">Already started</string>
    <string name="status_stop">Stopped</string>
    <string name="active">Active</string>
    <string name="stop">Stopped</string>
    <string name="time_unit">ms</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="delay_time">Delay Time</string>
    <string name="echo">Echo</string>
    <string name="volume">Volume</string>
    <string name="noise">Background Noise Reduction</string>

    <string name="transcript_example">
        Moby DickCall me Ishmael. Some years ago—never mind how long precisely—having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation. Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time tozz get to sea as soon as I can. This is my substitute for pistol and ball. With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the ocean with me.

There now is your insular city of the Manhattoes, belted round by wharves as Indian isles by coral reefs—commerce surrounds it with her surf. Right and left, the streets take you waterward. Its extreme downtown is the battery, where that noble mole is washed by waves, and cooled by breezes, which a few hours previous were out of sight of land. Look at the crowds of water-gazers there.


    </string>

</resources>